--- a/charts/app/templates/ingress.yaml
+++ b/charts/app/templates/ingress.yaml
@@ -24,7 +24,7 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-    - host: ngrok-review-app-test-{{ .Values.reviewAppId }}.ngrok.app
+    - host: {{ .Values.reviewAppId }}.ci.internal
       http:
         paths:
           - path: /
