--- a/.github/workflows/review-app.yaml
+++ b/.github/workflows/review-app.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-      - stacks
+      - testing
   pull_request:
     types: [opened, synchronize, reopened]
 
