--- a/charts/app/templates/ingress.yaml
+++ b/charts/app/templates/ingress.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.ingress.enabled -}}
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: ngrok.k8s.ngrok.com/v1alpha1
+kind: AgentEndpoint
 metadata:
   name: {{ include "app.fullname" . }}
   labels:
@@ -10,28 +10,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- with .Values.ingress.className }}
-  ingressClassName: {{ . }}
-  {{- end }}
-  {{- if .Values.ingress.tls }}
-  tls:
-    {{- range .Values.ingress.tls }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      secretName: {{ .secretName }}
-    {{- end }}
-  {{- end }}
-  rules:
-    - host: {{ .Values.reviewAppId }}.ci.internal
-      http:
-        paths:
-          - path: /
-            pathType: ImplementationSpecific
-            backend:
-              service:
-                name: {{ include "app.fullname" $ }}
-                port:
-                  number: {{ $.Values.service.port }}
+  url: https://{{ .Values.reviewAppID }}.internal
+  upstream:
+    url: http://{{ include "app.fullname" $ }}.default:{{ $.Values.service.port }}
 {{- end }}
