--- a/charts/app/templates/ingress.yaml
+++ b/charts/app/templates/ingress.yaml
@@ -13,3 +13,4 @@ spec:
   url: https://{{ .Values.reviewAppID }}.ci.internal
   upstream:
     url: http://{{ include "app.fullname" $ }}.default:{{ $.Values.service.port }}
+{{- end }}
